--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 	<head></head>
 	<body>
-		<p>Hey Siri</p>
+		<div>
+			<h1>Hey Siri</h1>
+		</div>
+		<style>
+			div {
+				width: 100vw;
+				height: 100vh;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		</style>
 	</body>
 </html>
